2007-01-30  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-make-object-from-url): Support friend object.
	(mixi-friend-url-regexp): Support profile page.
	(mixi-make-friend-from-url): Follow the change above.

	* sb-mixi.el (shimbun-mixi-group-alist): Add logs group.
	(shimbun-mixi-make-subject): Support log object.
	(shimbun-mixi-make-from): Ditto.
	(shimbun-mixi-make-message-id): Ditto.
	(shimbun-mixi-make-xref): Support log and friend object.
	(shimbun-mixi-make-body): Support friend object.

2007-01-24  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-group-alist): Add `messages.sent' and
	`mixi-el' groups to default value.

2007-01-24  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-bbs-community): Rename `bbs' from `object'.
	(mixi-bbs-comment-count): New accessor method.
	(mixi-bbs-set-comment-count): Ditto.
	(mixi-new-bbs-list-regexp): Fix regexp.
	(mixi-get-new-bbses): Return only BBSes having unseen comments.
	(mixi-new-comment-list-regexp): Fix regexp.
	(mixi-get-new-comments): Return only diaries having unseen comments.

2007-01-24  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-make-diary): Add comment-count argument.
	(mixi-diary-url-regexp): Follow the change above.
	(mixi-make-diary-from-url): Ditto.
	(mixi-diary-comment-count): New accessor method.
	(mixi-diary-time): Follow the change above.
	(mixi-diary-title): Ditto.
	(mixi-diary-content): Ditto.
	(mixi-diary-set-comment-count): New accessor method.
	(mixi-diary-set-time): Follow the change above.
	(mixi-diary-set-title): Ditto.
	(mixi-diary-set-content): Ditto.
	(mixi-get-diaries): Ditto.
	(mixi-get-new-diaries): Ditto.
	(mixi-search-diaries): Ditto.
	(mixi-make-topic): Add comment-count argument.
	(mixi-topic-url-regexp): Follow the change above.
	(mixi-make-topic-from-url): Ditto.
	(mixi-topic-comment-count): New accessor method.
	(mixi-topic-time): Follow the change above.
	(mixi-topic-title): Ditto.
	(mixi-topic-owner): Ditto.
	(mixi-topic-content): Ditto.