@@ -1,3 +1,7 @@
+2007-01-31  Yoichi NAKAYAMA  <yoichi@geiin.org>
+
+	* mixi-wl.el: Use wl-draft-send-hook.
+
 2007-01-30  OHASHI Akira  <bg66@koka-in.org>
 
 	* mixi.el (mixi-make-object-from-url): Support friend object.
